--- a/app/views/voice_actors/show.html.erb
+++ b/app/views/voice_actors/show.html.erb
@@ -27,43 +27,85 @@
   <h2>Statistics</h2>
 </div>
 
+<% number_of_current_stats_columns = [@current_win_stats, @current_appearance_stats, @current_vote_stats].reject {|s| s.nil? || s.empty? }.size %>
+
+<% if number_of_current_stats_columns > 0 %>
+  <div class="row-fluid">
+    <% unless @current_win_stats.empty? %>
+      <div class="span<%= 12 / number_of_current_stats_columns %>">
+        <h4>
+          Total match wins in Saimoe <%= @tournament.year %><br />
+          &nbsp;
+        </h4>
+        <%= render partial: 'view_models/statistics_list',
+                   object: @current_win_stats,
+                   as: :vm %>
+      </div>
+    <% end %>
+    <% unless @current_appearance_stats.empty? %>
+      <div class="span<%= 12 / number_of_current_stats_columns %>">
+        <h4>
+          Total matches participated in Saimoe <%= @tournament.year %><br />
+          &nbsp;
+        </h4>
+        <%= render partial: 'view_models/statistics_list',
+                   object: @current_appearance_stats,
+                   as: :vm %>
+      </div>
+    <% end %>
+    <% unless @current_vote_stats.empty? %>
+      <div class="span<%= 12 / number_of_current_stats_columns %>">
+        <h4>
+          Total votes in Saimoe <%= @tournament.year %><br />
+          <small>(<%= link_to 'See all', short_tournament_action_path(@tournament.year, :voice_actors_by_total_votes) %>)</small>
+        </h4>
+        <%= render partial: 'view_models/statistics_list',
+                   object: @current_vote_stats,
+                   as: :vm %>
+      </div>
+    <% end %>
+  </div>
+<% end %>
+
 <% number_of_stats_columns = [@win_stats, @appearance_stats, @vote_stats].reject {|s| s.empty? }.size %>
 
-<div class="row-fluid">
-  <% unless @win_stats.empty? %>
-    <div class="span<%= 12 / number_of_stats_columns %>">
-      <h4>
-        Total match wins<br />
-        <small>(<%= link_to 'See all', statistics_voice_actors_by_match_wins_path %>)</small>
-      </h4>
-      <%= render partial: 'view_models/statistics_list',
-                 object: @win_stats,
-                 as: :vm %>
-    </div>
-  <% end %>
-  <% unless @appearance_stats.empty? %>
-    <div class="span<%= 12 / number_of_stats_columns %>">
-      <h4>
-        Total matches participated in<br />
-        <small>(<%= link_to 'See all', statistics_voice_actors_by_match_appearances_path %>)</small>
-      </h4>
-      <%= render partial: 'view_models/statistics_list',
-                 object: @appearance_stats,
-                 as: :vm %>
-    </div>
-  <% end %>
-  <% unless @vote_stats.empty? %>
-    <div class="span<%= 12 / number_of_stats_columns %>">
-      <h4>
-        Total votes<br />
-        <small>(<%= link_to 'See all', statistics_voice_actors_by_total_votes_path %>)</small>
-      </h4>
-      <%= render partial: 'view_models/statistics_list',
-                 object: @vote_stats,
-                 as: :vm %>
-    </div>
-  <% end %>
-</div>
+<% if number_of_stats_columns > 0 %>
+  <div class="row-fluid">
+    <% unless @win_stats.empty? %>
+      <div class="span<%= 12 / number_of_stats_columns %>">
+        <h4>
+          Total match wins<br />
+          <small>(<%= link_to 'See all', statistics_by_match_wins_voice_actors_path %>)</small>
+        </h4>
+        <%= render partial: 'view_models/statistics_list',
+                   object: @win_stats,
+                   as: :vm %>
+      </div>
+    <% end %>
+    <% unless @appearance_stats.empty? %>
+      <div class="span<%= 12 / number_of_stats_columns %>">
+        <h4>
+          Total matches participated in<br />
+          <small>(<%= link_to 'See all', statistics_by_match_appearances_voice_actors_path %>)</small>
+        </h4>
+        <%= render partial: 'view_models/statistics_list',
+                   object: @appearance_stats,
+                   as: :vm %>
+      </div>
+    <% end %>
+    <% unless @vote_stats.empty? %>
+      <div class="span<%= 12 / number_of_stats_columns %>">
+        <h4>
+          Total votes<br />
+          <small>(<%= link_to 'See all', statistics_by_total_votes_voice_actors_path %>)</small>
+        </h4>
+        <%= render partial: 'view_models/statistics_list',
+                   object: @vote_stats,
+                   as: :vm %>
+      </div>
+    <% end %>
+  </div>
+<% end %>
 
 <div class="page-header">
   <h2>Tournament History</h2>
