Disallow turnitin bot, fix some title tags

--- a/app/views/characters/show.html.erb
+++ b/app/views/characters/show.html.erb
@@ -1,6 +1,6 @@
-<% content_for :title do %>
+<% content_for :title do -%>
   <%= @character.full_name %> | Saimoe
-<% end %>
+<% end -%>
 <% series = @character.main_series %>
 <div class="row-fluid">
   <% if @character.avatar? %>
