--- a/app/views/layouts/tournaments.html.erb
+++ b/app/views/layouts/tournaments.html.erb
@@ -1,7 +1,7 @@
 <% if @tournament %>
-    <% content_for :title do %>
+    <% content_for :title do -%>
         Saimoe <%= @tournament.year %>
-    <% end %>
+    <% end -%>
     <% content_for :tournament_nav do %>
 
         <%= nav_bar static: :top, responsive: true do %>
