--- a/app/views/voice_actors/show.html.erb
+++ b/app/views/voice_actors/show.html.erb
@@ -1,6 +1,6 @@
-<% content_for :title do %>
+<% content_for :title do -%>
   <%= @voice_actor.full_name %> | Saimoe
-<% end %>
+<% end -%>
 <div class="row-fluid">
   <div class="span12">
     <h1><%= @voice_actor.full_name %></h1>
