--- a/app/views/date/show.html.erb
+++ b/app/views/date/show.html.erb
@@ -1,6 +1,6 @@
-<% content_for :title do %>
+<% content_for :title do -%>
   Matches for <%= @date.to_s :long %> | 
-<% end %>
+<% end -%>
 <div class="page-header">
   <h1><%= @date.to_s :long %></h1>
 </div>
