One line ERB block

--- a/lib/templates/round_2_matches.html.erb
+++ b/lib/templates/round_2_matches.html.erb
@@ -94,10 +94,7 @@ td.infoc { padding: 1; text-align: center; max-height: 40; width: 240; font-fami
             </tr>
             <tr>
                 <td class="category">Defeated</td>
-                <td class="info">
-                    <% (r[:defeated] || []).each do |defeated| -%>
-                        <img src="Defeated/<%= defeated %>.jpg" />
-                    <% end -%>
+                <td class="info"><% (r[:defeated] || []).each do |defeated| %><img src="Defeated/<%= defeated %>.jpg" /><% end %>
                 </td>
             </tr>
         </table>
