--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -5,12 +5,6 @@
   <p>
     This is not the official Saimoe site, nor is it responsible for the running of the tournament. The official Saimoe 2013 site is <%= link_to 'here', 'http://acst13.saimoe.me/' %>, but is in Japanese only. Many thanks to Anonymous of the <%= link_to 'unofficial English Saimoe site', 'http://www.animesaimoe.org' %>, from which all of the data on this site is collected.
   </p>
-  <p>
-    <strong>2013-09-18 Update:</strong>
-  </p>
-  <p>
-    Round 1 has now concluded, and Round 2 starts on the 20th September JST. To make it slightly easier to track who still has a chance in the <%= link_to 'Losers Playoff', 'http://www.animesaimoe.org/2013changes.html' %>, the characters faded out below have been knocked out completely, while those that haven't been faded out still have a chance.
-  </p>
 </div>
 
 <div class="container-fluid">
@@ -19,6 +13,9 @@
       <% if @most_recent_view_models.any? %>
         <div class="page-header">
           <h3>Most Recent <%= 'Result'.pluralize(@most_recent_view_models.size) %></h3>
+          <% if @late_message %>
+            <br /><small><%= @late_message %></small>
+          <% end %>
         </div>
         <%= render partial: 'view_models/match',
                    collection: @most_recent_view_models,
