Add round 2 of playoffs

--- a/app/views/admin/admin/utilities.html.erb
+++ b/app/views/admin/admin/utilities.html.erb
@@ -57,6 +57,10 @@
       <%= f.check_box :name_playoff_round_1_matches %>
       <%= f.label :name_playoff_round_1_matches, 'Generate Losers Playoff Round 1 templates' %>
     </h4>
+    <h4>
+      <%= f.check_box :name_playoff_round_2_matches %>
+      <%= f.label :name_playoff_round_2_matches, 'Generate Losers Playoff Round 2 templates' %>
+    </h4>
     <%= f.file_field :name_csv %>
   </div>
   <div class="well">
