--- a/app/views/view_models/_group.html.erb
+++ b/app/views/view_models/_group.html.erb
@@ -4,11 +4,17 @@
             <div class="group-view-model-stage">
                 <h4><%= r[:stage] %></h4>
                 <div class="cb"></div>
-                <% r[:match_view_models].each do |match_view_model| %>
-                    <%= render partial: 'view_models/match',
-                               object: match_view_model,
-                               as: :vm %>
-                    <div class="cb"></div>
+                <% if r[:match_view_models] %>
+                    <% r[:match_view_models].each do |match_view_model| %>
+                        <%= render partial: 'view_models/match',
+                                   object: match_view_model,
+                                   as: :vm %>
+                        <div class="cb"></div>
+                    <% end %>
+                <% elsif r[:linked_match] %>
+                    <%= link_to date_path(r[:linked_match].date.to_s(:number)) do %>
+                        <%= r[:linked_match].pretty %> (<%= r[:linked_match].date.to_s(:month_day) %>)
+                    <% end %>
                 <% end %>
             </div>
         <% end %>
