Add update to home page on 2014 losers playoff.

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -5,6 +5,12 @@
   <p>
     This is not the official Saimoe site, nor is it responsible for the running of the tournament. The official Saimoe 2014 site is <%= link_to 'here', 'https://sites.google.com/site/animesaimoe2014/' %>, but is in Japanese only. Many thanks to Anonymous of the <%= link_to 'unofficial English Saimoe site', 'http://www.animesaimoe.org' %>, from which the data on this site is collected.
   </p>
+  <p>
+    <strong>Update 2014-09-09</strong>
+  </p>
+  <p>
+    Pages for this year's Losers' Playoffs added. Second place finishers from Round 1, Round 2 and the Final of each group will go into Round 1, Round 2 and the Final of the Losers' Playoff respectively. 24 losers progress from Round 1 to Round 2, 16 losers progress from Round 2 to the Finals, and 8 losers then progress to the Last 32 with the rest of the group winners.
+  </p>
 </div>
 
 <div class="container-fluid">
