--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,7 +3,7 @@
     This site aims to bring together facts and figures about the current and previous iterations of the <em>Anime Saimoe Tournament</em>&mdash;a competition to find the most moe character of the year, organised by users of Japanese message board <%= link_to '2ch', 'http://www.2ch.net' %>.
   </p>
   <p>
-    This is not the official Saimoe site, nor is it responsible for the running of the tournament. The official Saimoe 2014 site is <%= link_to 'here', 'https://sites.google.com/site/animesaimoe2014/' %>, but is in Japanese only. Many thanks to Anonymous of the <%= link_to 'unofficial English Saimoe site', 'http://www.animesaimoe.org' %>, from which the data on this site is collected.
+    This is not the official Saimoe site, nor is it responsible for the running of the tournament. The official Saimoe 2014 site is <%= link_to 'here', 'http://www.saimoe2014.info/' %>, but is in Japanese only. Many thanks to Anonymous of the <%= link_to 'unofficial English Saimoe site', 'http://www.animesaimoe.org' %>, from which the data on this site is collected.
   </p>
   <p>
     <strong>Update 2014-09-09</strong>
