--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,10 +6,13 @@
     This is not the official Saimoe site, nor is it responsible for the running of the tournament. The official Saimoe 2014 site is <%= link_to 'here', 'http://www.saimoe2014.info/' %>, but is in Japanese only. Many thanks to Anonymous of the <%= link_to 'unofficial English Saimoe site', 'http://www.animesaimoe.org' %>, from which the data on this site is collected.
   </p>
   <p>
-    <strong>Update 2014-09-09</strong>
+    <strong>Update 2014-10-18</strong>
   </p>
   <p>
-    Pages for this year's Losers' Playoffs added. Second place finishers from Round 1, Round 2 and the Final of each group will go into Round 1, Round 2 and the Final of the Losers' Playoff respectively. 24 losers progress from Round 1 to Round 2, 16 losers progress from Round 2 to the Finals, and 8 losers then progress to the Last 32 with the rest of the group winners.
+    We're now over halfway through the Group Finals. After the <%= link_to 'final Losers Playoff', date_path('20141025') %>, for which the top 8 will advance, we'll have the <strong>Last 32</strong>.
+  </p>
+  <p>
+    This consists of 8 matches, with 3 random group winners and 1 random Losers Playoff winner per match. The <em>top 2</em> of each Last 32 match go forward to the <strong>Last 16</strong>, where matches proceed much like they did in the <%= link_to '2013 tournament', short_tournament_path('2013') %>.
   </p>
 </div>
 
