Add match names to last 16/32, fix layout clearing, update homepage

--- a/app/assets/stylesheets/view_models/final_matches_view_model.css.less
+++ b/app/assets/stylesheets/view_models/final_matches_view_model.css.less
@@ -53,8 +53,8 @@
         text-align: center;
     }
 
-    .last-16 {
-        .last-16-block {
+    .last-x {
+        .last-x-block {
             float: left;
 
             &:first-child {
@@ -82,6 +82,6 @@
             }
 
         }
-        
+
     }
 }
