--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,13 +6,10 @@
     This is not the official Saimoe site, nor is it responsible for the running of the tournament. The official Saimoe 2014 site is <%= link_to 'here', 'http://www.saimoe2014.info/' %>, but is in Japanese only. Many thanks to Anonymous of the <%= link_to 'unofficial English Saimoe site', 'http://www.animesaimoe.org' %>, from which the data on this site is collected.
   </p>
   <p>
-    <strong>Update 2014-10-18</strong>
+    <strong>Update 2014-10-28</strong>
   </p>
   <p>
-    We're now over halfway through the Group Finals. After the <%= link_to 'final Losers Playoff', date_path('20141025') %>, for which the top 8 will advance, we'll have the <strong>Last 32</strong>.
-  </p>
-  <p>
-    This consists of 8 matches, with 3 random group winners and 1 random Losers Playoff winner per match. The <em>top 2</em> of each Last 32 match go forward to the <strong>Last 16</strong>, where matches proceed much like they did in the <%= link_to '2013 tournament', short_tournament_path('2013') %>.
+    The draw for the <em>Last 32</em> has been made. The top two from each match will go forward to the <em>Last 16</em>. The random draw to decide the match-ups for the final sixteen characters will take place on 2014-11-09.
   </p>
 </div>
 
