--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,10 +6,10 @@
     This is not the official Saimoe site, nor is it responsible for the running of the tournament. The official Saimoe 2014 site is <%= link_to 'here', 'http://www.saimoe2014.info/' %>, but is in Japanese only. Many thanks to Anonymous of the <%= link_to 'unofficial English Saimoe site', 'http://www.animesaimoe.org' %>, from which the data on this site is collected.
   </p>
   <p>
-    <strong>Update 2014-10-28</strong>
+    <strong>Update 2014-11-10</strong>
   </p>
   <p>
-    The draw for the <em>Last 32</em> has been made. The top two from each match will go forward to the <em>Last 16</em>. The random draw to decide the match-ups for the final sixteen characters will take place on 2014-11-09.
+    Official results by the tournament administration have been decided much later than usual for these Last 32 matches. The schedule has been revised such that the Last 16 draw will now take place on <em>14th</em> November, rather than the 9th. The first four Last 16 matches have also been pushed back.
   </p>
 </div>
 
