--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,10 +6,10 @@
     This is not the official Saimoe site, nor is it responsible for the running of the tournament. The official Saimoe 2014 site is <%= link_to 'here', 'http://www.saimoe2014.info/' %>, but is in Japanese only. Many thanks to Anonymous of the <%= link_to 'unofficial English Saimoe site', 'http://www.animesaimoe.org' %>, from which the data on this site is collected.
   </p>
   <p>
-    <strong>Update 2014-11-10</strong>
+    <strong>Update 2014-11-20</strong>
   </p>
   <p>
-    Official results by the tournament administration have been decided much later than usual for these Last 32 matches. The schedule has been revised such that the Last 16 draw will now take place on <em>14th</em> November, rather than the 9th. The first four Last 16 matches have also been pushed back.
+    You may have noticed no results have been posted here&mdash;this is because the matches have been delayed by the tournament administrator's computer breaking. Hopefully the tournament will resume soon, but all of the matches yet to run (Last 16 onwards) will be delayed until an unspecified date in the future.
   </p>
 </div>
 
