--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,10 +6,10 @@
     This is not the official Saimoe site, nor is it responsible for the running of the tournament. The official Saimoe 2014 site is <%= link_to 'here', 'http://www.saimoe2014.info/' %>, but is in Japanese only. Many thanks to Anonymous of the <%= link_to 'unofficial English Saimoe site', 'http://www.animesaimoe.org' %>, from which the data on this site is collected.
   </p>
   <p>
-    <strong>Update 2014-11-20</strong>
+    <strong>Update 2014-12-15</strong>
   </p>
   <p>
-    You may have noticed no results have been posted here&mdash;this is because the matches have been delayed by the tournament administrator's computer breaking. Hopefully the tournament will resume soon, but all of the matches yet to run (Last 16 onwards) will be delayed until an unspecified date in the future.
+    We're back on with the tournament. Official results for the Last 16 expected soon.
   </p>
 </div>
 
