--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,10 +6,10 @@
     This is not the official Saimoe site, nor is it responsible for the running of the tournament. The official Saimoe 2014 site is <%= link_to 'here', 'http://www.saimoe2014.info/' %>, but is in Japanese only. Many thanks to Anonymous of the <%= link_to 'unofficial English Saimoe site', 'http://www.animesaimoe.org' %>, from which the data on this site is collected.
   </p>
   <p>
-    <strong>Update 2014-12-15</strong>
+    <strong>Update 2014-12-23</strong>
   </p>
   <p>
-    We're back on with the tournament. Official results for the Last 16 expected soon.
+    Ladies and gentlemen, the final match. Apologies for the late updates on my part. May the best Saki win.
   </p>
 </div>
 
