--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,10 +6,16 @@
     This is not the official Saimoe site, nor is it responsible for the running of the tournament. The official Saimoe 2014 site is <%= link_to 'here', 'http://www.saimoe2014.info/' %>, but is in Japanese only. Many thanks to Anonymous of the <%= link_to 'unofficial English Saimoe site', 'http://www.animesaimoe.org' %>, from which the data on this site is collected.
   </p>
   <p>
-    <strong>Update 2014-12-23</strong>
+    <strong>Final Update</strong>
   </p>
   <p>
-    Ladies and gentlemen, the final match. Apologies for the late updates on my part. May the best Saki win.
+    Well, here we are. After a rocky second half to the tournament, we've ended up with a tie in the final. Yes, really, that is the final outcome by the looks of things.
+  </p>
+  <p>
+    It's very unclear at the moment whether the tournament will run next year, especially given the management troubles and various other well-documented issues, but we'll just have to wait and see. I'm not making any guarantees about keeping up with next year's tournament, but I certainly will try.
+  </p>
+  <p>
+    So long, and congratulations to Nodoka and Saki.
   </p>
 </div>
 
